Add CHANGELOG entry for version 1.2.0